# dane-emotion-recognition-worker

./: Dockerfile  pyproject.toml  sseft_shap_new.py  train.py  wav_features.py
.github/workflows/: _deploy.yml
Docker/: Dockerfile
T_data/meld/: READ_ME.txt
fairseq/: progress_bar.py
fairseq/criterions/: emotion_prediction_cri.py
fairseq/data/: Dockerfile  indexed_dataset.py  raw_audio_text_video_dataset.py
fairseq/models/: mulT_emo.py  wav2vec.py
pre-trained_models/: READ_ME.txt
