[tool.poetry]
name = "dane-emotion-recognition-worker"
version = "0.1.0"
description = "DANE worker for multi-modal emotion recognition"
authors = ["Kathleen Koosje de Boer <k.k.deboer@students.uu.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dane = "^0.4.2"
omegaconf = "^2.0.6"
hydra-core = "^1.0.7"
shap = "^0.44.1"
numpy = "^1.23.1"
pytorch = "^2.1.0"
torchvision = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mockito = "^1.3.3"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
black = "^22.10.0"
mypy = "^0.982"
types-requests = "^2.28.11.2"

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"